refactor: テンプレート共通化

--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -10,7 +10,11 @@
 	<body>
 		<%= render 'admin/layouts/navbar' %>
 		<%= render 'admin/layouts/sidebar' %>
-		<%= yield %>
+		<main class="content">
+			<%= render 'admin/home/navbar' %>
+			<%= yield %>
+		</main>
+		<%= render 'admin/layouts/footer' %>
 		<%= render 'admin/layouts/include_js' %>
 	</body>
 
