--- a/app/views/admin/layouts/_sidebar.html.erb
+++ b/app/views/admin/layouts/_sidebar.html.erb
@@ -18,10 +18,16 @@
 		</div>
 		<ul class="nav flex-column">
 			<li class="nav-item  active ">
-				<a href="../../pages/dashboard/dashboard.html" class="nav-link">
+				<%= link_to admin_root_path, class: "nav-link" do %>
 					<span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
 					<span>Overview</span>
-				</a>
+				<% end %>
+			</li>
+			<li class="nav-item ">
+				<%= link_to admin_users_path, class: "nav-link" do %>
+					<span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
+					<span>ユーザー一覧</span>
+				<% end %>
 			</li>
 			<li class="nav-item ">
 				<a href="../../pages/transactions.html" class="nav-link">
