--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,10 +1,56 @@
-<%= render 'admin/layouts/searchbar' %>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
+  <div class="d-block mb-4 mb-md-0">
+    <h2 class="h4">All Users</h2>
+  </div>
+</div>
 
-<%= link_to new_admin_user_path do %>
-  <button class="btn btn-secondary text-dark mr-2 dropdown-toggle">
-      <span class="fas fa-plus mr-2"></span>New
-  </button>
-<% end %>
+<div class="table-settings mb-4">
+  <div class="row align-items-center justify-content-between">
+    <div class="col col-md-6 col-lg-3 col-xl-4">
+      <div class="input-group">
+        <span class="input-group-text" id="basic-addon2"><span class="fas fa-search"></span></span>
+        <input type="text" class="form-control" id="exampleInputIconLeft" placeholder="Search" aria-label="Search" aria-describedby="basic-addon2">
+      </div>
+    </div>
+    <div class="col-4 col-md-2 col-xl-1 pl-md-0 text-right">
+      <div class="btn-group">
+        <button class="btn btn-link text-dark dropdown-toggle dropdown-toggle-split m-0 p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="icon icon-sm icon-gray">
+            <span class="fas fa-cog"></span>
+          </span>
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <div class="dropdown-menu dropdown-menu-xs dropdown-menu-right">
+          <span class="dropdown-item font-weight-bold text-dark">Show</span>
+          <a class="dropdown-item d-flex font-weight-bold" href="#">10 <span class="icon icon-small ml-auto"><span class="fas fa-check"></span></span></a>
+          <a class="dropdown-item font-weight-bold" href="#">20</a>
+          <a class="dropdown-item font-weight-bold" href="#">30</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
+  <div class="btn-toolbar dropdown">
+      <button class="btn btn-primary btn-sm mr-2 dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="fas fa-plus mr-2"></span>New
+      </button>
+      <div class="dropdown-menu dashboard-dropdown dropdown-menu-left mt-2">
+          <%= link_to new_admin_user_path, class: "dropdown-item font-weight-bold" do %><span class="fas fa-tasks"></span>New User<% end %>
+          <% if false %>
+            <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-cloud-upload-alt"></span>Upload Files</a>
+            <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-user-shield"></span>Preview Security</a>
+            <div role="separator" class="dropdown-divider"></div>
+            <a class="dropdown-item font-weight-bold" href="#"><span class="fas fa-rocket text-danger"></span>Upgrade to Pro</a>
+          <% end %>
+      </div>
+  </div>
+  <div class="btn-group">
+      <button type="button" class="btn btn-sm btn-outline-primary">Share</button>
+      <button type="button" class="btn btn-sm btn-outline-primary">Export</button>
+  </div>
+</div>
 
 <div class="card card-body border-light shadow-sm table-wrapper table-responsive pt-0">
     <table class="table table-hover">
