--- a/app/views/admin/layouts/_sidebar.html.erb
+++ b/app/views/admin/layouts/_sidebar.html.erb
@@ -26,7 +26,7 @@
 			<li class="nav-item ">
 				<%= link_to admin_users_path, class: "nav-link" do %>
 					<span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
-					<span>ユーザー一覧</span>
+					<span>All Users</span>
 				<% end %>
 			</li>
 			<li class="nav-item ">
