--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,32 +4,24 @@
   </div>
 </div>
 
-<div class="table-settings mb-4">
-  <div class="row align-items-center justify-content-between">
-    <div class="col col-md-6 col-lg-3 col-xl-4">
-      <div class="input-group">
-        <span class="input-group-text" id="basic-addon2"><span class="fas fa-search"></span></span>
-        <input type="text" class="form-control" id="exampleInputIconLeft" placeholder="Search" aria-label="Search" aria-describedby="basic-addon2">
+<%= form_tag admin_users_path, method: :get, name: "search_form" do %>
+  <div class="table-settings mb-4">
+    <div class="row align-items-center justify-content-between">
+      <div class="col col-md-6 col-lg-3 col-xl-4">
+        <div class="input-group">
+          <span class="input-group-text" id="basic-addon2"><span class="fas fa-search"></span></span>
+          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search" %>
+          <%= submit_tag 'search', class: "btn btn-primary btn-sm mr-2" do %><button type="button" class="btn btn-default">検索</button><% end %>
+        </div>
       </div>
-    </div>
-    <div class="col-4 col-md-2 col-xl-1 pl-md-0 text-right">
-      <div class="btn-group">
-        <button class="btn btn-link text-dark dropdown-toggle dropdown-toggle-split m-0 p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="icon icon-sm icon-gray">
-            <span class="fas fa-cog"></span>
-          </span>
-          <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <div class="dropdown-menu dropdown-menu-xs dropdown-menu-right">
-          <span class="dropdown-item font-weight-bold text-dark">Show</span>
-          <a class="dropdown-item d-flex font-weight-bold" href="#">10 <span class="icon icon-small ml-auto"><span class="fas fa-check"></span></span></a>
-          <a class="dropdown-item font-weight-bold" href="#">20</a>
-          <a class="dropdown-item font-weight-bold" href="#">30</a>
+      <div class="col-4 col-md-2 col-xl-1 pl-md-0 text-right">
+        <div class="btn-group">
+          <%= select_tag :display_count, options_for_select([["10", "10"],["20", "20"],["30", "30"]], selected: params[:display_count]), {prompt: "Show", class: "form-control"} %>
         </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
 
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
   <div class="btn-toolbar dropdown">
@@ -94,3 +86,11 @@
       <div class="font-weight-bold small">Showing <b><%= @users.count %></b> out of <b><%= User.count %></b> entries</div>
     </div>
 </div>
+
+<script>
+  const selectElement = document.querySelector('#display_count');
+
+  selectElement.addEventListener('change', (event) => {
+    document.search_form.submit();
+  });
+</script>
