--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -41,6 +41,7 @@
   <div class="btn-group">
       <button type="button" class="btn btn-sm btn-outline-primary">Share</button>
       <button type="button" class="btn btn-sm btn-outline-primary">Export</button>
+      <%= button_to export_csv_admin_users_path(format: :csv), method: :get, class: "btn btn-sm btn-outline-primary" do %>Export<% end %>
   </div>
 </div>
 
