--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="col-md-12 mb-3">
             <label for="content">Content</label>
-            <%= f.text_area :content, class: "form-control" %>
+            <%= f.rich_text_area :content, class: "form-control" %>
           </div>
         </div>
 
