--- a/app/views/admin/layouts/_navbar.html.erb
+++ b/app/views/admin/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-dark navbar-theme-primary px-4 col-12 d-md-none">
-	<a class="navbar-brand mr-lg-5" href="../../index.html">
+	<%= link_to admin_root_path, class: "navbar-brand mr-lg-5" do %>
 		<%= image_tag "light.svg", class: "navbar-brand-dark", alt: "Volt logo" %>
 		<%= image_tag "dark.svg", class: "navbar-brand-light", alt: "Volt logo" %>
-	</a>
+	<% end %>
 	<div class="d-flex align-items-center">
 		<button class="navbar-toggler d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
