fix: スマホ表示時のサインアウトボタンのリンクを修正

--- a/app/views/admin/layouts/_sidebar.html.erb
+++ b/app/views/admin/layouts/_sidebar.html.erb
@@ -7,7 +7,9 @@
 				</div>
 				<div class="d-block">
 					<h2 class="h6">Hi, Jane</h2>
-					<a href="../../pages/examples/sign-in.html" class="btn btn-secondary text-dark btn-xs"><span class="mr-2"><span class="fas fa-sign-out-alt"></span></span>Sign Out</a>
+					<%= button_to destroy_user_session_path, method: :delete, class: "btn btn-secondary text-dark btn-xs" do %>
+						<span class="mr-2"><span class="fas fa-sign-out-alt"></span></span>Sign Out
+					<% end %>
 				</div>
 			</div>
 			<div class="collapse-close d-md-none">
