add: ログイン画面にデザイン適用

--- a/app/assets/stylesheets/admin/volt.css
+++ b/app/assets/stylesheets/admin/volt.css
@@ -26241,6 +26241,7 @@ label {
 .form-bg-image {
     background-repeat: no-repeat !important;
     background-position: top center !important;
+    background-image: url('signin.svg');
 }
 
 /**
